--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: alshayaa_app
+name: schooly
 description: "A new Flutter project."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -36,6 +36,10 @@ dependencies:
   permission_handler: ^11.3.1
   shared_preferences: ^2.3.5
   flutter_dotenv: ^5.2.1
+  fpdart: ^1.1.1
+  go_router: ^14.6.3
+  jwt_decoder: ^2.0.1
+  upgrader: ^11.3.1
 
 dev_dependencies:
   flutter_test:
@@ -53,12 +57,13 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/lottie/
+    - .env
 
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Alexandria
+      fonts:
+        - asset: assets/fonts/alex.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
