--- a/build.yaml
+++ b/build.yaml
@@ -3,5 +3,5 @@ targets:
     builders:
       json_serializable:
         options:
-          field_rename: snake
+          field_rename: none
           explicit_to_json: true
