--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,12 @@
 name: schooly
 description: "A new Flutter project."
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
   sdk: ^3.5.0
-
 
 dependencies:
   flutter:
@@ -40,6 +38,8 @@ dependencies:
   go_router: ^14.6.3
   jwt_decoder: ^2.0.1
   upgrader: ^11.3.1
+  json_annotation: ^4.9.0
+  json_serializable: ^6.9.0
 
 dev_dependencies:
   flutter_test:
@@ -52,13 +52,9 @@ flutter:
   generate: true
   uses-material-design: true
 
-
   assets:
     - assets/images/
-    - assets/icons/
-    - assets/lottie/
     - .env
-
 
   fonts:
     - family: Alexandria
