--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  agora_rtc_engine: ^6.5.0
+  get: ^4.6.6
   animations: ^2.0.11
   awesome_dio_interceptor: ^1.3.0
   cached_network_image: ^3.4.1
