--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,9 @@ flutter:
 
   assets:
     - .env
-
+    - assets/images/
+    - assets/icons/
+    - assets/lottie/
 
   fonts:
     - family: Alexandria
