--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   upgrader: ^11.3.1
   json_annotation: ^4.9.0
   json_serializable: ^6.9.0
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
