--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,8 +57,8 @@ flutter:
   assets:
     - .env
     - assets/images/
-    - assets/icons/
-    - assets/lottie/
+  #  - assets/icons/
+  # - assets/lottie/
 
   fonts:
     - family: Alexandria
