--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ flutter:
     - .env
     - assets/images/
     - assets/icons/
-  # - assets/lottie/
+    - assets/lottie/
 
   fonts:
     - family: Alexandria
