--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   json_annotation: ^4.9.0
   json_serializable: ^6.9.0
   flutter_svg: ^2.0.17
+  camera: ^0.11.0+2
 
 dev_dependencies:
   flutter_test:
