--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   json_serializable: ^6.9.0
   flutter_svg: ^2.0.17
   camera: ^0.11.0+2
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
