--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   camera: ^0.11.0+2
   dropdown_button2: ^2.3.9
   file_picker: "^9.0.1"
-
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
